--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://imxixi.cn
+baseurl: /about/
 
 # Site settings
 title: Awesome Title
