--- a/_config.yml
+++ b/_config.yml
@@ -13,44 +13,44 @@ people:
   pic: 1
   position: 生命中不可或缺的伙伴
   social:
-    - title: 无
+    - title: yarn
       url: #
-    - title: 无
+    - title: yarn
       url: #
-    - title: 无
+    - title: yarn
       url: #
 
 - name: 夕夕
   pic: 2
   position: 立志于成为更好的自己
   social:
-    - title: 博客
+    - title: blog
       url: https://imxixi.cn/ #
-    - title: Github
+    - title: github
       url: https://github.com/mxxixi/ #
-    - title: 小红书
+    - title: book
       url: https://www.xiaohongshu.com/user/profile/5cf77a250000000025019e80 #
 
 - name: 夜明
   pic: 3
   position: 将伴随我一生的人
   social:
-    - title: 博客
+    - title: blog
       url: https://lixiaoxu.cn/ #
-    - title: Github
+    - title: github
       url: https://github.com/lixx-code #
-    - title: 微博
+    - title: weibo
       url: https://weibo.com/LxxDawn #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: 小红书
+  - title: book
     url: https://www.xiaohongshu.com/user/profile/5cf77a250000000025019e80 #http://twitter.com/jekyllrb
-  - title: 我的博客
+  - title: blog
     url: https://imxixi.cn/ #
-  - title: 哔哩哔哩
+  - title: tv-retro
     url: https://space.bilibili.com/457038975/dynamic #http://stackoverflow.com/questions/tagged/jekyll
-  - title: 微博 
+  - title: weibo 
     url: https://m.weibo.cn/profile/6867557735 #http://bitbucket.org/jekyll
   - title: github
     url: https://github.com/mxxixi/ #http://github.com/jekyll
